--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "bmschmidt",
 	"version": "0.0.1",
 	"scripts": {
-		"dev": "svelte-kit dev -p 3003",
+		"dev": "svelte-kit dev -p 3006",
 		"build": "svelte-kit build",
 		"publish": "svelte-kit build && rsync -ravz build/ root@benschmidt.org:html/",
 		"package": "svelte-kit package",
@@ -13,31 +13,34 @@
 		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-auto": "next",
-		"@sveltejs/adapter-static": "^1.0.0-next.26",
-		"@sveltejs/kit": "^1.0.0-next.232",
-		"@tailwindcss/typography": "^0.5.0",
-		"@typescript-eslint/eslint-plugin": "^4.31.1",
-		"@typescript-eslint/parser": "^4.31.1",
-		"autoprefixer": "^10.4.2",
-		"carbon-icons-svelte": "^10.44.4",
-		"eslint": "^7.32.0",
-		"eslint-config-prettier": "^8.3.0",
-		"eslint-plugin-svelte3": "^3.2.1",
+		"@duckdb/duckdb-wasm": "^1.14.4",
+		"@sveltejs/adapter-auto": "^1.0.0-next.52",
+		"@sveltejs/adapter-static": "^1.0.0-next.34",
+		"@sveltejs/kit": "^1.0.0-next.354",
+		"@tailwindcss/typography": "^0.5.2",
+		"@typescript-eslint/eslint-plugin": "^5.29.0",
+		"@typescript-eslint/parser": "^5.29.0",
+		"apache-arrow": "^8.0.0",
+		"autoprefixer": "^10.4.7",
+		"carbon-icons-svelte": "^11.1.0",
+		"eslint": "^8.18.0",
+		"eslint-config-prettier": "^8.5.0",
+		"eslint-plugin-svelte3": "^4.0.0",
 		"feed": "^4.2.2",
-		"js-yaml": "^3.14.1",
-		"mdsvex": "^0.9.8",
-		"postcss-load-config": "^3.1.1",
-		"prettier": "^2.4.1",
-		"prettier-plugin-svelte": "^2.4.0",
-		"svelte": "^3.46.2",
-		"svelte-check": "^2.2.6",
-		"svelte-preprocess": "^4.10.2",
-		"tailwindcss": "^3.0.11",
-		"tslib": "^2.3.1",
-		"typescript": "^4.4.3",
-		"vega-embed": "^6.20.5",
-		"vite-plugin-markdown": "^2.0.2"
+		"js-yaml": "^4.1.0",
+		"pandoc-svelte-components": "^0.0.4",
+		"postcss-load-config": "^4.0.1",
+		"prettier": "^2.7.1",
+		"prettier-plugin-svelte": "^2.7.0",
+		"svelte": "^3.48.0",
+		"svelte-check": "^2.8.0",
+		"svelte-preprocess": "^4.10.7",
+		"tailwindcss": "^3.1.4",
+		"tslib": "^2.4.0",
+		"typescript": "^4.7.4",
+		"vega-embed": "^6.21.0",
+		"vite": "^3.0.9",
+		"web-worker": "^1.2.0"
 	},
 	"type": "module"
 }
