--- a/package.json
+++ b/package.json
@@ -2,10 +2,9 @@
 	"name": "bmschmidt",
 	"version": "0.0.1",
 	"scripts": {
-		"dev": "svelte-kit dev -p 3006",
-		"build": "svelte-kit build",
-		"publish": "svelte-kit build && rsync -ravz build/ root@benschmidt.org:html/",
-		"package": "svelte-kit package",
+		"dev": "vite dev --port 3006",
+		"build": "vite build",
+		"publish": "vite build && rsync -ravz build/ root@benschmidt.org:html/",
 		"preview": "svelte-kit preview",
 		"check": "svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
@@ -13,29 +12,29 @@
 		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
 	},
 	"devDependencies": {
-		"@duckdb/duckdb-wasm": "^1.14.4",
-		"@sveltejs/adapter-auto": "^1.0.0-next.52",
-		"@sveltejs/adapter-static": "^1.0.0-next.34",
-		"@sveltejs/kit": "^1.0.0-next.354",
-		"@tailwindcss/typography": "^0.5.2",
-		"@typescript-eslint/eslint-plugin": "^5.29.0",
-		"@typescript-eslint/parser": "^5.29.0",
-		"apache-arrow": "^8.0.0",
-		"autoprefixer": "^10.4.7",
-		"carbon-icons-svelte": "^11.1.0",
-		"eslint": "^8.18.0",
+		"@duckdb/duckdb-wasm": "^1.16.0",
+		"@sveltejs/adapter-auto": "^1.0.0-next.65",
+		"@sveltejs/adapter-static": "^1.0.0-next.39",
+		"@sveltejs/kit": "^1.0.0-next.429",
+		"@tailwindcss/typography": "^0.5.4",
+		"@typescript-eslint/eslint-plugin": "^5.34.0",
+		"@typescript-eslint/parser": "^5.34.0",
+		"apache-arrow": "^9.0.0",
+		"autoprefixer": "^10.4.8",
+		"carbon-icons-svelte": "^11.2.0",
+		"eslint": "^8.22.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte3": "^4.0.0",
 		"feed": "^4.2.2",
 		"js-yaml": "^4.1.0",
-		"pandoc-svelte-components": "^0.0.4",
+		"pandoc-svelte-components": "file:../lib/pandoc-svelte/package",
 		"postcss-load-config": "^4.0.1",
 		"prettier": "^2.7.1",
 		"prettier-plugin-svelte": "^2.7.0",
-		"svelte": "^3.48.0",
-		"svelte-check": "^2.8.0",
+		"svelte": "^3.49.0",
+		"svelte-check": "^2.8.1",
 		"svelte-preprocess": "^4.10.7",
-		"tailwindcss": "^3.1.4",
+		"tailwindcss": "^3.1.8",
 		"tslib": "^2.4.0",
 		"typescript": "^4.7.4",
 		"vega-embed": "^6.21.0",
