--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
 		"postcss-load-config": "^4.0.1",
 		"prettier": "^3.2.5",
 		"prettier-plugin-svelte": "^3.2.3",
-		"quires": "file:/Users/benschmidt/lib/quire2",
+		"quires": "file:../../benschmidt/lib/quire2",
 		"svelte": "^5.0.0-next.224",
 		"svelte-check": "^3.8.5",
 		"svelte-preprocess": "^5.0.1",
