--- a/package.json
+++ b/package.json
@@ -13,9 +13,8 @@
 	},
 	"devDependencies": {
 		"@duckdb/duckdb-wasm": "^1.21.0",
-		"@sveltejs/adapter-auto": "^3.2.1",
-		"@sveltejs/adapter-static": "^3.0.1",
-		"@sveltejs/kit": "^2.5.10",
+		"@sveltejs/adapter-static": "^3.0.6",
+		"@sveltejs/kit": "^2.8.1",
 		"@tailwindcss/typography": "^0.5.9",
 		"@types/js-yaml": "^4.0.5",
 		"@typescript-eslint/eslint-plugin": "^8.1.0",
@@ -32,9 +31,7 @@
 		"postcss-load-config": "^4.0.1",
 		"prettier": "^3.2.5",
 		"prettier-plugin-svelte": "^3.2.3",
-		"quires": "file:../../benschmidt/lib/quire2",
-		"svelte": "^5.0.0-next.224",
-		"svelte-check": "^3.8.5",
+		"svelte": "^5.2.1",
 		"svelte-preprocess": "^5.0.1",
 		"tailwindcss": "^3.4.3",
 		"tslib": "^2.5.0",
@@ -46,6 +43,13 @@
 	"type": "module",
 	"dependencies": {
 		"@djot/djot": "^0.3.1",
-		"d3-scale-chromatic": "^3.0.0"
+		"@observablehq/plot": "^0.6.16",
+		"arquero": "^6.0.1",
+		"d3": "^7.9.0",
+		"d3-dsv": "^3.0.1",
+		"d3-scale-chromatic": "^3.0.0",
+		"quires": "^1.0.0",
+		"svelte-vega": "^3.0.0",
+		"zod": "^3.23.8"
 	}
 }
